CSS/info_style.css
@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');

:-webkit-scrollbar {
  display: none;
}

body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: 'Cabin', sans-serif;
  background-image: url("..\\Images/SectionBackgrounds/sec-1.jpg");
  background-attachment: fixed;
  
}

/* Navbar styling*/

.navbar {
  position: sticky;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #264653;
  color: white;
}

.logo img {
  margin-left: 1vw;
  height: 90px; 
  width: 290px;
}

.links ul {
  margin: 0;
  padding: 0;
  display: flex;
}

.links li {
  list-style: none;
}

.links li a {
  text-decoration: none;
  color: white;
  font-size: 20px;
  padding: 3.5vh 3vw;
  display: block;
}

.links li:hover {
  background-color: #E63946;
}

.button {
  position: absolute;
  top: 3.5vh;
  right: 4vw;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  width: 30px;
  height: 20px;
}

@media (max-width: 750px) {
  .logo {
    font-size: 30px;
    padding: 2vh 0;
  }

  .button{
    top: 3.5vh;
    display: flex;
  }

  .links{
    display: none;
    background-color: #305a6b;
    width: 100%;
  }

  .navbar {
    flex-direction: column;
    align-items: flex-start;
  }

  .links ul {
    width: 100%;
    flex-direction: column;
  }

  .links li {
    text-align: center;
  }

  .links li a {
    padding: 2vh 1vw;
  }

  .links.active {
    display: flex;
  }
}

/* End of Navbar styling*/

#welcome_text {
  text-align: center;
  color: #E63946;
}

@media (max-width: 1400px) {
  #welcome_text {
    font-size: 14px;
  }
}

@media (max-width: 800px) {
  #welcome_text {
    font-size: 10px;
  }
}

/* Page content styling*/

.row {
  margin-top: 20px;
}

.content1 {
  position: relative;
  display: flex;
  color: #fff;
  margin: 5vh;
  padding: 30vw 2vw 2vw 2vw;
  background-image: url("..\\Images/burgas_firedepartment.jpg");
  background-size: cover;
  margin-bottom: 200px;
}

.container1 {
  font-size: 20px;
  position: absolute;
  left: 0;
  background-color: #305a6b;
  padding: 10px 10px 10px 10px;
  width: 30vw;
  height: 180px;
}

.container2 {
  position: absolute;
  left: 31vw;
  background-color: #A8DADC;
  width: 20vw;
  padding: 10px 10px 10px 10px;
  width: 20vw;
  height: 180px;
}

.container2 h2{
  font-size: 25px;
}

.container2 p{
  font-size: 17px;
}

.container2 img {
  height: 15px;
  width: 15px;
}

@media (max-width: 1600px)
{
  .container1 {
    font-size: 17px;
  }

  .container2 h2{
    font-size: 22px;
  }

  .container2 p{
    font-size: 16px;
  }
}

@media (max-width: 1400px) {
  .container1 {
    font-size: 15px;
  }

  .container2 h2{
    font-size: 20px;
  }

  .container2 p{
    font-size: 14px;
  }

  .container2 img {
    height: 10px;
    width: 10px;
  }
}

@media (max-width: 800px) {
  .container1{
    font-size: 10px;
    height: 130px;
  }

  .container2{
    height: 130px;
  }

  .container2 h2{
    font-size: 13px;
  }

  .container2 p{
    font-size: 12px;
  }

  .container2 img {
    height: 8px;
    width: 8px;
  }
}

@media (max-width: 500px) {
  .container1 {
    font-size: 7px;
    height: 100px;
  }

  .container2{
    height: 100px;
  }

  .container2 h2{
    font-size: 10px;
  }

  .container2 p{
    font-size: 8px;
  }

  .container2 img {
    height: 5px;
    width: 5px;
  }
}

/* End of content styling*/

/* First section styling */

.row {
  display: flex;
  align-items: center;
}

.col1 {
  text-align: center;
  margin-left: 5vw;
  color: white;
}

.col1 h1{
  font-size: 90px;
}

.col1 h3{
  font-size: 50px;
}

.card{
  position:relative;
  right: -10%;
  width: 350px;
  height: 350px;
  border-radius: 10px;
  padding: 15px 25px;
  display:inline-block;
  cursor: pointer;
  margin: 10px 15px;
  background-position: center;
  background-size: cover;
  transition: transform 0.5s;
  text-align:center;
}

.card:hover{
  transform: translateY(-10px);
}

.card1{
  background-image: url("..\\Images/Cards/background.jpg");
}

.card2{
  background-image: url("..\\Images/Cards/background2.jpg");
}

.card3{
  background-image: url("..\\Images/Cards/background3.jpg");
}

.card4{
  background-image: url("..\\Images/Cards/background4.jpg");
}

.card p{
  color: #fff;
  font-size: 12px;
  text-align: center;
}

h5{
  font-size: 15px;
  color: #fff;
  text-shadow: 0 0 5px #999;
  text-align: center;
  font-family: 'Varela Round', sans-serif;}

@media (max-width: 1800px) 
{
  .col1 h1{
    font-size: 60px;
  }

  .col1 h3{
    font-size: 40px;
  }
}

@media (max-width: 1600px) 
{
  .card {
    height: 300px;
    width: 300px;
  }
}

@media (max-width: 1500px) 
{
  .card {
    height: 250px;
    width: 250px;
  }
}

@media (max-width: 1400px) 
{
  .col1 h1{
    font-size: 50px;
  }

  .col1 h3{
    font-size: 30px;
  }
  .card {
    height: 200px;
    width: 200px;
  }
}

@media (max-width: 600px) 
{
  .card {
    height: 150px;
    width: 150px;
  }
}

/* End of First Section styling */

/* Counter effect */

.counters1::after {
  font: 800 40px system-ui;
  content: counter(count);
  animation: counter 100s linear infinite alternate;
  counter-reset: count 0;
  color: white;
}
/* ... */

